[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ap-text-client"
version = "0.1.0"
description = "Minimal Archipelago text client that only surfaces items concerning your slot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=15.0",
    "textual>=8.0",
]

[project.scripts]
ap-text-client = "ap_text_client.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ap_text_client"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
    "ruff>=0.6",
]

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]
